Make sure SVG bottom isn't cut off for any viewport dimension

--- a/style.scss
+++ b/style.scss
@@ -296,12 +296,18 @@ a:active {
     flex-direction: column;
     justify-content: space-evenly;
     background-image: url('./SVGs/gold_wave3.svg');
-    background-position: center;
+    background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
     box-shadow: 0 0 10px #333;
     font-family: 'Fira Sans', sans-serif;
     color: goldenrod;
+
+    @media screen and (orientation: landscape) {
+        background-position: bottom;
+        aspect-ratio: 9/6;
+        height: 100vh;
+    }
 
     h2 {
         padding-top: 1rem;
